// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should render Search component with props = (valueText="valueText") 1`] = `
<form
  className="search"
  onSubmit={[MockFunction]}
>
  <label
    htmlFor="searchId"
  >
    <input
      className="search__text"
      id="searchId"
      name="search"
      onChange={[MockFunction]}
      placeholder="Search"
      type="search"
      value="valueText"
    />
    <SearchIconSvg
      onClickQuery={[MockFunction]}
    />
  </label>
</form>
`;

exports[`Search should render Search component without props 1`] = `
<form
  className="search"
  onSubmit={[MockFunction]}
>
  <label
    htmlFor="searchId"
  >
    <input
      className="search__text"
      id="searchId"
      name="search"
      onChange={[MockFunction]}
      placeholder="Search"
      type="search"
      value=""
    />
    <SearchIconSvg
      onClickQuery={[MockFunction]}
    />
  </label>
</form>
`;
